--- a/app/web/index.html
+++ b/app/web/index.html
@@ -33,6 +33,21 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<div id="flashcard-container">
+
+</div>
+  <contianer id="controls">
+    <form>
+      <div>Question:
+        <textarea id="question"></textarea>
+      </div>
+      <div>Answer:
+        <textarea id="answer"></textarea>
+      </div>
+    </form>
+    <button id="new" onclick="newFlash()">new</button>
+    <button id="flip" onclick="flip()">flip</button>
+  </contianer>
+  <script src="flashcard.js"></script>
 </body>
 </html>
